--- a/src/Components/css/MessageItem.css
+++ b/src/Components/css/MessageItem.css
@@ -1,7 +1,7 @@
 .msg{
     width: 20%;
-    border-collapse: collapse;
-    border: 1px solid black;
+    /*border-collapse: collapse;*/
+    border: 2px solid black;
     background-color: #7F3033;
     
    
