--- a/src/Components/css/MessageItem.css
+++ b/src/Components/css/MessageItem.css
@@ -3,8 +3,11 @@
     border-collapse: collapse;
     border: 1px solid black;
     background-color: #7F3033;
+}
+
+p{
+    font-size: 17px;
     
-   
 }
 
 .messageContent{
