--- a/src/Components/css/MessageItem.css
+++ b/src/Components/css/MessageItem.css
@@ -1,8 +1,11 @@
 .msg{
-    width: 20%;
     /*border-collapse: collapse;*/
-    border: 2px solid black;
-    background-color: #7F3033;
+    margin: 5px;
+    padding: 10px;
+    margin-top:0px;
+    padding-top: 0px;
+    border-bottom: 1px solid lightgray;
+    /* background-color: #7F3033; */
 }
 
 p{
@@ -10,8 +13,15 @@ p{
     
 }
 
-.messageContent{
-    white-space: nowrap;
+.messageContent {
+    display: block;
+    white-space: nowrap; /* forces text to single line */
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+/* .messageContent{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+} */
