--- a/src/Components/css/MessageDetail.css
+++ b/src/Components/css/MessageDetail.css
@@ -9,7 +9,24 @@ table{
 
 }
 tbody{
-    
     display: inherit;
-
 }
+
+.Modal {
+    position: absolute;
+    top: 40px;
+    left: 40px;
+    right: 40px;
+    bottom: 40px;
+    background-color: white;
+
+  }
+
+  .Overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.5);;
+  }
