--- a/src/comps/css/HomeScreen.css
+++ b/src/comps/css/HomeScreen.css
@@ -10,9 +10,15 @@ html, body {
     position: fixed;
 }
 
+#welcome{
+    margin-top: 28%;
+    margin-left: 37%;
+    font-size: 4em;
+}
+
 .Left{
     /* FALTA SCROLLBAR DE WEBKIT */
-    height:100%;
+    height:91%;
     width:28% ;
     position: absolute;
     background-color: white;
@@ -20,9 +26,26 @@ html, body {
     overflow:scroll;
 }
 .Right{
-    height:100%;
+    height:91%;
     width:70% ;
     right: 0;
     position: absolute;
     background-color: white;
+}
+
+#scroll::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+#scroll::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+#scroll::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
 }
