--- a/src/comps/css/MessageDetail.css
+++ b/src/comps/css/MessageDetail.css
@@ -18,10 +18,10 @@ tbody{
 
 .Modal {
     position: absolute;
-    top: 200px;
-    left: 200px;
-    right: 200px;
-    bottom: 200px;
+    top: 35%;
+    left: 30%;
+    right: 30%;
+    bottom: 35%;
     background-color: white;
 
   }
