--- a/src/comps/css/HomeScreen.css
+++ b/src/comps/css/HomeScreen.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 body{
     height:100%;
+    font-family: 'Roboto', sans-serif;
 }
 
 html, body {
@@ -8,6 +11,7 @@ html, body {
     -webkit-overflow-scrolling: touch !important;
     overflow: hidden !important;
     position: fixed;
+    font-family: 'Roboto', sans-serif;
 }
 
 #welcome{
