--- a/src/comps/css/HomeScreen.css
+++ b/src/comps/css/HomeScreen.css
@@ -26,7 +26,7 @@ html, body {
     width:29%;
     position: absolute;
     background-color: white;
-    border-right: 2px solid lightgray;
+    /* border-right: 2px solid lightgray; */
     overflow: none;
 }
 .Right{
