--- a/src/comps/css/MessageItem.css
+++ b/src/comps/css/MessageItem.css
@@ -1,16 +1,20 @@
 .msg{
     /*border-collapse: collapse;*/
-    margin: 5px;
+    /* margin: 5px; */
     padding: 10px;
     margin-top:0px;
     padding-top: 0px;
-    border-bottom: 1px solid lightgray;
+    /* border-bottom: 1px solid lightgray; */
     /* background-color: #7F3033; */
 }
 
 p{
     margin: 0px;
     
+}
+
+.msg:hover{
+    background-color: whitesmoke;
 }
 
 .messageContent {
@@ -38,3 +42,7 @@ p{
 .chatList-date {
     margin-bottom: 15px;
 }
+
+
+
+@import url("https://cdn.jsdelivr.net/npm/semantic-ui/dist/semantic.min.css");
