--- a/src/comps/css/InboxDetail.css
+++ b/src/comps/css/InboxDetail.css
@@ -1,21 +1,57 @@
-.button-w {
+body{
+    height:100%;
+    width:80%;
+    right:0px;
+}
+table{
+    
+    display: inherit;
+
+}
+tbody{
+    display: inherit;
+}
+
+.firstRow,.secondRow{
+	font-weight: bold; 
+}
+
+.Modal {
+    position: absolute;
+    top: 35%;
+    left: 30%;
+    right: 30%;
+    bottom: 35%;
+    background-color: white;
+
+  }
+
+.Overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.5);;
+  }
+.buttonOK{
     text-align: center;
     -moz-box-shadow:inset 0px 0px 0px 0px #f5978e;
 	-webkit-box-shadow:inset 0px 0px 0px 0px #f5978e;
 	box-shadow:inset 0px 0px 0px 0px #f5978e;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f));
-	background:-moz-linear-gradient(top, #3772f2 5%, #2f43f3 100%);
-	background:-webkit-linear-gradient(top, #3772f2 5%, #2f43f3 100%);
-	background:-o-linear-gradient(top, #3772f2 5%, #2f43f3 100%);
-	background:-ms-linear-gradient(top, #3772f2 5%, #2f43f3 100%);
-	background:linear-gradient(to bottom, #3772f2 5%, #2f43f3 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#3772f2', endColorstr='#2f43f3',GradientType=0);
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89c403), color-stop(1, #77a809));
+	background:-moz-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:-webkit-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:-o-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:-ms-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89c403', endColorstr='#77a809',GradientType=0);
 	background-color:#3772f2;
 	-moz-border-radius:11px;
 	-webkit-border-radius:11px;
 	border-radius:11px;
 	border:1px solid #3772f2;
-	display:block;
+
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Trebuchet MS;
@@ -25,20 +61,62 @@
 	text-decoration:none;
     text-shadow:0px 0px 0px #810e05;
     margin-top: 10px;
-    margin-left: 35%;
+    margin-left: 10%;
 }
-.button-w:hover {
-	background:-webkit-linear-gradient(top, #2f43f3 5%, #3772f2 100%);
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #2f43f3), color-stop(1, #3772f2));
-	background:-moz-linear-gradient(top, #2f43f3 5%, #3772f2 100%);
-	background:-webkit-linear-gradient(top, #2f43f3 5%, #3772f2 100%);
-	background:-o-linear-gradient(top, #2f43f3 5%, #3772f2 100%);
-	background:-ms-linear-gradient(top, #2f43f3 5%, #3772f2 100%);
-	background:linear-gradient(to bottom, #2f43f3 5%, #3772f2 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#032a7e', endColorstr='#3772f2',GradientType=0);
-	background-color:#2f43f3;
+.buttonOK:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77a809), color-stop(1, #89c403));
+	background:-moz-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:-webkit-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:-o-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:-ms-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77a809', endColorstr='#89c403',GradientType=0);
+	background-color:#77a809;
 }
-.button-w:active {
+.buttonOK:active {
+	position:relative;
+	top:1px;
+}
+
+.button {
+	-moz-box-shadow:inset 0px 0px 0px 0px #f5978e;
+	-webkit-box-shadow:inset 0px 0px 0px 0px #f5978e;
+	box-shadow:inset 0px 0px 0px 0px #f5978e;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f));
+	background:-moz-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-webkit-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-o-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-ms-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:linear-gradient(to bottom, #f24537 5%, #c62d1f 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f',GradientType=0);
+	background-color:#f24537;
+	-moz-border-radius:11px;
+	-webkit-border-radius:11px;
+	border-radius:11px;
+	border:1px solid #d02718;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Trebuchet MS;
+	font-size:15px;
+	font-weight:bold;
+	padding:15px 40px;
+	text-decoration:none;
+    text-shadow:0px 0px 0px #810e05;
+    margin-top: 10px;
+    margin-left: 3px;
+}
+.button:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
+	background:-moz-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:-webkit-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:-o-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:-ms-linear-gradient(top, #c62d1f 5%, #f24537 100%);
+	background:linear-gradient(to bottom, #c62d1f 5%, #f24537 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c62d1f', endColorstr='#f24537',GradientType=0);
+	background-color:#c62d1f;
+}
+.button:active {
 	position:relative;
 	top:1px;
 }
