--- a/src/comps/css/MessageItem.css
+++ b/src/comps/css/MessageItem.css
@@ -1,4 +1,4 @@
-.msg{
+.msg {
     /*border-collapse: collapse;*/
     /* margin: 5px; */
     padding: 10px;
@@ -8,12 +8,22 @@
     /* background-color: #7F3033; */
 }
 
-p{
+.msgItem{
+    /*border-collapse: collapse;*/
+    /* margin: 5px; */
+    padding: 10px;
+    margin-top:0px;
+    padding-top: 0px;
+    /* border-bottom: 1px solid lightgray; */
+    /* background-color: #7F3033; */
+}
+
+p{ 
     margin: 0px;
     
 }
 
-.msg:hover{
+.msgItem:hover{
     background-color: whitesmoke;
 }
 
