--- a/src/comps/css/MessageList.css
+++ b/src/comps/css/MessageList.css
@@ -18,9 +18,9 @@
 
 .bar{
     /* FALTA SCROLLBAR DE WEBKIT */
-    height:91%;
+    height:95%;
     width:100%;
     position: absolute;
     background-color: white;
-    overflow:scroll;
+    overflow-y:scroll;
 }
